[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/FallingObject2.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/FallingObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Gameworld.gd" type="Script" id=4]
[ext_resource path="res://assets/fondo.png" type="Texture" id=5]

[node name="Gameworld" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 240.625, 316.25 )
scale = Vector2( 1.55656, 2.28993 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Timer3" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 251, 615 )

[node name="FallingObject" parent="." instance=ExtResource( 2 )]
position = Vector2( 89, -72 )

[node name="FallingObject2" parent="." groups=["obstacle"] instance=ExtResource( 1 )]
position = Vector2( 367, -332 )

[node name="FallingObject3" parent="." groups=["obstacle"] instance=ExtResource( 1 )]
position = Vector2( 206, -241 )

[node name="DamageTakenSound" type="AudioStreamPlayer2D" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="puntos" type="Label" parent="GUI" groups=["puntos"]]
margin_left = 3.0
margin_top = 8.0
margin_right = 43.0
margin_bottom = 22.0
rect_scale = Vector2( 2, 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer2_timeout"]
